Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15076

Duplicate Method Error should indicate method

    XMLWordPrintable

Details

    • 7964b819aefbee380ca24288c6234f5917211529

    Description

      Hi,

      a warning like this makes it really hard to figure out, what's the problem:

      file:///Users/pixtur/Nokia/QML/tris/TetriminoPool.qml:7:1: Duplicate method name 
           Image { 
           ^ 
      

      You should indicate the method that causes the problem:

      file:///Users/pixtur/Nokia/QML/tris/TetriminoPool.qml:7:1: Duplicate method name "getTetrisBlock"
           Image { 
           ^ 
      

      Attachments

        For Gerrit Dashboard: QTBUG-15076
        # Subject Branch Project Status CR V

        Activity

          People

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            pixtur Thomas Mann
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes