Improve error messages from compiler for signals and slots

This commit ensures that correct line and column information is
provided in some cases (duplicate signal or method name, etc).

Task-number: QTBUG-15076
Change-Id: I483bdc92ef4f1d1d2ff565bb957385fd495672da
Reviewed-on: http://codereview.qt.nokia.com/1619
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>